# git-gone

./: .python-version  README.md  pyproject.toml
git_gone/: source.py  synchronise.py
gitgone/: __main__.py  install.py  read_changes.py
gitgone/data/: track-changed-repos.sh
