[tool.poetry]
name = "gitgone"
version = "0.1.0"
description = "A simple tool to track visited Git repositories, and check them for unpushed/committed changes"
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
plumbum = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
